# genomeflow

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
examples/: example.WDL  response.txt
examples/dagExamples/: ad_transposon_dag.py  ad_transposon_dag_test.py  gcsDriveExample.py
genomeflow/: DBLogger.py  controller.py  main.py  synapseDownloader.py  worker.py
genomeflow/docker/: GCPcreationWithDocker.sh
genomeflow/docker/MHammelLab/: dockerFile
genomeflow/docker/ad-transposon/: Dockerfile  FastqToBam.sh  additionalPrograms.sh  aleelab-genomeflow-c89b0fb50650.json  connectToTest.sh  dockerBuild.sh  dockerPush.sh  job-new.yml  job-test.yml  job.yml  referenceDownload.sh  sampleDownload.sh  worker.py
genomeflow/docker/bastion/: Dockerfile  connectToBastion.sh  consumeAllMessage.sh  deployment.yaml  dockerBuild.sh
genomeflow/docker/downloaders/: Dockerfile  dockerBuild.sh  dockerPush.sh
genomeflow/docker/genomeFlow/: DockerFile
genomeflow/docker/gtex-genotype/: Dockerfile  referenceDownload.sh  sampleDownload.sh
genomeflow/docker/leafcutter/: Dockerfile  dockerBuild.sh  entry_point.sh  getTokenFromPassword.py  installLeafCutter.R
genomeflow/docker/monocyte-transposon/: Dockerfile  connectToTest.sh  dockerBuild.sh  job-test.yml  user-settings.mkfg  worker.py
genomeflow/docker/mosaicALS/: 1.bam_to_fastq.sh  10.join.sh  2.STAR_two_pass_new.sh  3.read_filter_pre.sh  4.gatk_processing.sh  5.read_filter_post.sh  (+4 more)
genomeflow/kubernetes/: pd-worker.yaml  pvc-worker.yaml
genomeflow/tests/: codeTest.ipynb  synapseDownloader.sh  test.sh
(+26 files in other folders)
